TJ: respondsTo now also works with classes